# tello-vio

./: README.md  prompt.txt
.pydeps/numpy-1.26.4.dist-info/: RECORD
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/orbslam2/lib/orbslam2/: mono
install/orbslam2/share/ament_index/resource_index/parent_prefix_path/: orbslam2
install/orbslam2/share/orbslam2/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tello/share/tello/: package.sh  package.xml
install/tello_control/share/ament_index/resource_index/parent_prefix_path/: tello_control
install/tello_control/share/tello_control/: local_setup.sh  package.sh  package.xml
install/tello_msg/share/tello_msg/: local_setup.sh  package.sh
libs/: README.md
log/: latest_build
scripts/: orbslam.sh
slam/src/orbslam2/: CMakeLists.txt  config.yaml
slam/src/orbslam2/CMakeModules/: FindORB_SLAM2.cmake
slam/src/orbslam2/src/monocular/: mono.cpp  monocular-slam-node.cpp  monocular-slam-node.hpp
workspace/src/: launch.py
workspace/src/tello/: setup.py
workspace/src/tello/launch/: tello.launch.py
workspace/src/tello/tello/: node.py
workspace/src/tello_control/: CMakeLists.txt  rviz.rviz
workspace/src/tello_control/src/: main.cpp
workspace/src/tello_msg/: CMakeLists.txt
